--- a/style.css
+++ b/style.css
@@ -58,13 +58,18 @@ p{
     color: hsl(215, 51%, 70%)
 }
 #eth{
-    display: flex;
     margin-top: 20px;
+    width: 100%
+}
+#et{
+    float:left;
 }
 #clock{
-   color:hsl(215, 51%, 70%);
-   margin-left: 100px;
+    float: right;
+    color:hsl(215, 51%, 70%);
+    text-align: right;
 }
+
 #cyan{
     color: hsl(178, 100%, 50%);
 }
